home page ready and lyrics check added

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -6,7 +6,7 @@
     <title>Bootstrap demo</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="successstyle.css" rel="stylessheet"
+    <link href="css/successstyle.css" rel="stylessheet"
   </head>
   <body>
     <div>
@@ -23,11 +23,15 @@
                 <% });%>
 
            <% } %> 
-h
+
 
         </div>
         
-
+        <form action="/redirect" method="POST">
+        
+        
+          <button type="submit">Home</button>
+      </form>
 
          
 
