--- a/views/success 2.ejs
+++ b/views/success 2.ejs
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Detector</title>
+    <title>Music Player</title>
     <link rel="stylesheet" href="css/style2.css">
     <!-- <script src="script.js" defer></script> -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 </head>
 
 <body>
-  
     <div class="player">
         <div class="player_inner">
           <div class="player_inner__top">
@@ -23,16 +21,16 @@
                     <img src="Break The Chain3.png" 
                       style=" width :0px;height:0px;
                       padding: 11.89rem;
-                      background:url('<%=imgsrc%>');
+                      background:url('https://is1-ssl.mzstatic.com/image/thumb/Music114/v4/0d/a3/1a/0da31af7-d0ff-9bee-c427-1b6d0336f6fc/886446321981.jpg/400x400cc.jpg');
                       border-radius: 10px;
                       
                       background-size:cover">
                       
             <div class="t_left">
-              <i class="bi bi-arrow-left-circle-fill fa-lg"></i>
+              <i class="fa fa-bars"></i>
             </div>
             <div class="t_mid">
-              <h1></h1>
+              <h1>CUB3DPlayer</h1>
             </div>
             
           </div>
@@ -40,8 +38,7 @@
             <input class="trigger--4" name="omni" type="radio">
             
             <input class="trigger--2" name="omni" type="radio">
-            <input class="trigger--1" name="omni" type="radio" >
-            
+            <input class="trigger--1" name="omni" type="radio">
             <input class="empty">
             <div class="cube">
               <div class="cube_inner">
@@ -50,7 +47,7 @@
                     <img src="Break The Chain3.png" 
                       style=" width :0px;height:0px;padding:12rem;
                       
-                      background:url('<%=imgsrc%>');
+                      background:url('https://is1-ssl.mzstatic.com/image/thumb/Music114/v4/0d/a3/1a/0da31af7-d0ff-9bee-c427-1b6d0336f6fc/886446321981.jpg/400x400cc.jpg');
                       background-size:cover;
                       opacity: 0.3;">
                       </div>
@@ -68,24 +65,24 @@
                   </div>
                   <div class="details">
                     <div class="details_album">
-                      <img src="Break The Chain3.png" 
+                      <img src="images/Break The Chain3.png" 
                       style=" width :0px;height:0px;padding:45px;border-radius: 5%; background-color:red;
-                      background:url('<%=artistimage%>'); background-size:cover">  
+                      background:url('<%=imgsrc%>'); background-size:cover">  
                       
                     </div>
-                    <h2><%=trackname%></h2>
-                    <h3><%=artistname%></h3>
+                    <h2>Koan Sound - Meanwhile in the future</h2>
+                    <h3>Funkblaster</h3>
                   </div>
                 </div>
                 <div class="cube_inner__left">
                     <div class="options">
-                        <% if(lyricsarr.length>0){ %>
-                            <% lyricsarr.forEach(element => { %>
-                                
-                                <%=element %> <br>
-                            <% });%>
-            
-                       <% } %>
+                      <% if(lyricsarr.length>0){ %>
+                        <% lyricsarr.forEach(element => { %>
+                            
+                            <%=element %> <br>
+                        <% });%>
+        
+                   <% } %>
                         
                       </div>
                 </div>
@@ -98,39 +95,30 @@
             <div class="shadow_right"></div>
             <div class="shadow_left"></div>
             <div class="player_inner__bottom">
-                <h1><%=trackname%></h1>
+              <%= artistname  %>
     
-                <h4><%=artistname%></h4>
-                <h5>Genre: <%=genres%></h5>
-                <div class="buttondiv">
-                <button type="button" onclick="location.href='<%=yturl%>'" class="ytmusic">
-                Open in Youtube Music
+              <%= trackname  %>
                 
-                <i class="bi bi-play-circle-fill fa-lg"></i>
-                </button>
-              </div>
+                
               </div>
           </div>
           
         </div>
       </div>
 
-      <form action="/redirect" method="POST" id="homepgfrm">
-        
-    </form>
+           
+
+           
+
            
 
             
        </div>
    </div>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-   <script>
-    var homepgform =document.getElementById("homepgfrm");
-    var backbtn =document.querySelector(".t_left .bi-arrow-left-circle-fill");
-    backbtn.addEventListener("click",()=>{
-  
-        homepgform.submit();
-    });
-  </script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
