--- a/views/success.ejs
+++ b/views/success.ejs
@@ -20,7 +20,7 @@
         <div class="player_inner">
           <div class="player_inner__top">
             
-                    <img src="Break The Chain3.png" 
+                    <img src="<%=imgsrc%>" 
                       style=" width :0px;height:0px;
                       padding: 11.89rem;
                       background:url('<%=imgsrc%>');
@@ -47,7 +47,7 @@
               <div class="cube_inner">
                 <div class="cube_inner__front">
                     <div class="imgcover">
-                    <img src="Break The Chain3.png" 
+                    <img src="<%=imgsrc%>" 
                       style=" width :0px;height:0px;padding:12rem;
                       
                       background:url('<%=imgsrc%>');
@@ -68,7 +68,7 @@
                   </div>
                   <div class="details">
                     <div class="details_album">
-                      <img src="Break The Chain3.png" 
+                      <img src="<%=artistimage%>" 
                       style=" width :0px;height:0px;padding:45px;border-radius: 5%; background-color:red;
                       background:url('<%=artistimage%>'); background-size:cover">  
                       
